--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
       <title>Flask React</title>
+      <link rel="stylesheet" href="static/fixed.css">
   </head>
   <body>
     <div id="app"></div>
